added images to portfolio page

--- a/app/assets/stylesheets/components/_circle.scss
+++ b/app/assets/stylesheets/components/_circle.scss
@@ -15,6 +15,23 @@
   box-shadow: #fff 0 0 0 5px;
 }
 
+.circle-line-1:after {
+  display: block;
+  content: "";
+  width: .5rem;
+  height: .5rem;
+  border: #e7eef2 .1rem solid;
+  position: relative;
+  top: 6px;
+  left: 50%;
+  margin-left: -.25rem;
+  background: #fff;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  border-radius: 100%;
+  box-shadow: #fff 0 0 0 5px;
+}
+
 #hr-top:after {
   top: 5px;
 }
