--- a/app/assets/stylesheets/components/_headers.scss
+++ b/app/assets/stylesheets/components/_headers.scss
@@ -5,10 +5,7 @@ h3 {
 }
 
 .big-header {
-  top: 36px;
-  right: 7px;
-  font-size: 7vw;
-  position: relative;
+  font-size: 5.7rem;
   &:hover {
     color: $primary;
   }
