made sure it is mobil friendly

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -7,3 +7,10 @@ footer {
 .footer-links a {
   color: blueviolet;
 }
+
+@include media-breakpoint-down(sm) {
+  footer {
+    width: 80vw;
+    margin: 0 auto;
+  }
+}
