--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -9,28 +9,22 @@
   <div class="py-3 pr-4">
     <div class="my-card border-bottom">
       <div class="row">
-        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
-          <%= image_tag "booklub.jpg", style: 'width:15vw;', class: "my-card-image" %>
-        </div> -->
-        <div class="col-6 my-card-content text-right pl-0">
+        <div class="col-md-6 col-12 my-card-content text-md-right pl-md-0">
           <div class="title pt-4 pt-lg-1 d-flex flex-md-row-reverse flex-column">
-            <h4 class="project-title pl-4"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
+            <h4 class="project-title pl-md-4"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
           </div>
           <p class="project-p">In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
             on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together
             with distance book clubs.</p>
         </div>
-
-        <div class="col-6">
+        <div class="col-md-6 d-none d-md-block">
           <p class="project-p pb-2"><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
             <%= image_tag "heroku.png", title: "Heroku", class: 'project-icons-1' %>
             <%= image_tag "ruby.png", title: "Ruby", class: 'project-icons-1' %>
             <%= image_tag "rails.png", title: "Rails", class: 'project-icons-1' %>
             <%= image_tag "postgresql.png", class: 'project-icons-1', title: "PostgreSQL" %>
           </p>
-
           <%= image_tag "v2-booklub.jpg", class: "portfolio-images"%>
-
         </div>
       </div>
       <div class="circle-line-1"></div>
@@ -38,21 +32,16 @@
 
     <div class="my-card py-4 mb-4 mt-4 border-bottom">
       <div class="row">
-        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
-          <%= image_tag "schoolgoal.jpg", style: 'width:15vw;', class: "my-card-image" %>
-        </div> -->
-        <div class="col-6">
+        <div class="col-md-6 d-none d-md-block">
           <p class="project-p text-right pb-2"><i class="fab fa-js-square project-js pr-2"></i><i class="fab fa-sass project-sass"></i>
             <%= image_tag "heroku.png", title: "Heroku", class: 'project-icons-1' %>
             <%= image_tag "ruby.png", title: "Ruby", class: 'project-icons-1' %>
             <%= image_tag "rails.png", title: "Rails", class: 'project-icons-1' %>
             <%= image_tag "postgresql.png", class: 'project-icons-1', title: "PostgreSQL" %>
           </p>
-
           <%= image_tag "v2-schoolgoal.jpg", class: "portfolio-images"%>
         </div>
-
-        <div class="col-6 my-card-content pr-0">
+        <div class="col-md-6 col-12 my-card-content pr-0">
           <div class="title d-flex flex-md-row flex-column">
             <h4 class="project-title pr-4"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
           </div>
@@ -69,26 +58,20 @@
     <section id="bottom"></section>
     <div class="my-card pr-4 mb-4 border-bottom">
       <div class="row">
-        <!-- <div class="d-sm-none d-md-block col-md-4 my-card-image">
-        </div> -->
-
-        <div class="col-6 my-card-content text-right pl-0">
+        <div class="col-12 col-md-6 my-card-content text-md-right pl-md-0">
           <div class="title d-flex flex-md-row-reverse flex-column">
             <h4 class="d-flex"><a href="https://sean-mr-cocktail.herokuapp.com/" class="project-title" target="_blank">Mr. Cocktail</a></h4>
           </div>
           <p class="project-p">Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
             PostgreSQL for the database, and bootstrap for the majority of the design.</p>
         </div>
-
-        <div class="col-6">
+        <div class="col-md-6 d-none d-md-block">
           <p class="project-p pb-2"><i class="project-css fab fa-css3 pr-2"></i><%= image_tag "ruby.png", title: "Ruby", class: 'project-icons' %>
             <%= image_tag "rails.png", title: "Rails", class: 'project-icons' %>
             <%= image_tag "postgresql.png", class: 'project-icons', title: "PostgreSQL" %><%= image_tag "html-5.png", class: 'project-icons', title: "HTML-5" %>
           </p>
-
           <%= image_tag "v3-mr-cocktail.jpg", class: "portfolio-images" %>
         </div>
-
       </div>
       <div class="circle-line-1"></div>
     </div>
