removed extra p in about section

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,10 +7,9 @@
   <br>
   <p>Hey there! I’m Sean O'Reilly.</p>
 
-  
   <p>In October 2020 I officially began my studies as a web developer by joining the team at Le Wagon Mexico, a highly rated full stack web development bootcamp with locations based all over the world, and this one being based in Mexico City, Mexico. 
 
-  <p>My main expertise since completion of the bootcamp is with <span class="ruby">Ruby on Rails</span> but in my time studying I have gained experience working with a number of other technologies and platforms including <span class="heroku">Heroku</span>, <span class="vanilla">vanilla JS</span>, <span class="jq">JQuery</span>, <span class="postgresql">PostgreSQL</span>, <span class="git">Git and Github</span>, <span class="scss">Sass</span>, and <span class="react">React</span>. </p></p>
+  <p>My main expertise since completion of the bootcamp is with <span class="ruby">Ruby on Rails</span> but in my time studying I have gained experience working with a number of other technologies and platforms including <span class="heroku">Heroku</span>, <span class="vanilla">vanilla JS</span>, <span class="jq">JQuery</span>, <span class="postgresql">PostgreSQL</span>, <span class="git">Git and Github</span>, <span class="scss">Sass</span>, and <span class="react">React</span>.
 
   <p>Since early 2015 I’ve worked as an English teacher while exploring the world, setting up in such varied cities as Bangkok, Ho Chi Minh City, and Huelva and Murcia, Spain. I have had the wonderful opportunity to travel and experience so many different cultures across our beautiful planet. Although I loved teaching and was deeply passionate about my students success, I am so excited to be taking on a new creative endeavor to push me even further and one that can challenge me and my desire for problem solving and going beyond what I already know.</p>
 
