on lg added github repos

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,12 +8,26 @@
   <p>Have a project you think we'd work well on together? <%= link_to "Get in touch!", new_contact_path, class: "home-links" %></p>
   
   <h3 class="my-3">Projects I've worked on recently ...</h3>
-
-  <p><a href="https://www.booklub.xyz/" target="_blank">Booklub: </a>The easiest book club app in the world</p>
-  <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal: </a>Connecting educators with young learners</p>
-  <p><a href="https://sean-mr-cocktail.herokuapp.com/" target="_blank">Sir Cocktail: </a>An mvp app to track cocktail recipes</p>
-  <p><a href="https://github.com/seano424/rails-simple-airbnb" target="_blank">Rails Simple Airbnb: </a>Keep track of you day to day tasks with this simple keep clone</p>
-  <p><a href="https://github.com/seano424/rails-yelp-mvp" target="_blank">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
+  <div class="d-flex justify-content-between">
+    <p><a href="https://www.booklub.xyz/" target="_blank">Booklub: </a>The easiest book club app in the world</p>
+    <p class="d-none d-lg-block">..........................................<a href="https://github.com/seano424/booklub" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal: </a>Connecting educators with young learners</p>
+    <p class="d-none d-lg-block">...............................<a href="https://github.com/seano424/schoolgoal" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p><a href="https://sean-mr-cocktail.herokuapp.com/" target="_blank">Mr. Cocktail: </a>An mvp app to track cocktail recipes</p>
+    <p class="d-none d-lg-block">.......................................<a href="https://github.com/seano424/rails-mister-cocktail" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p><a href="https://github.com/seano424/rails-simple-airbnb" target="_blank">Rails Simple Airbnb: </a>Keep track of you day to day tasks</p>
+    <p class="d-none d-lg-block">.............................<a href="https://github.com/seano424/rails-simple-airbnb" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p><a href="https://github.com/seano424/rails-yelp-mvp" target="_blank">Rails Yelp MVP: </a>A basic mvp to list and locate restaurants</p>
+    <p class="d-none d-lg-block">........................<a href="https://github.com/seano424/rails-yelp-mvp" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
 
