sealife added to a new experiments section on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -31,4 +31,11 @@
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
 
+<h3 class="my-3">Experiments I've played around on recently ...</h3>
 
+<div class="d-flex justify-content-between">
+  <p><a href="https://sealife.herokuapp.com/" target="_blank">Sealife: </a>A visual CSS experiment</p>
+  <p class="d-none d-lg-block">........................................................................<a href="https://github.com/seano424/sealife" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
+</div>
