added positioning on project page

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -13,7 +13,7 @@
           <div class="title pt-4 pt-lg-1 d-flex flex-md-row-reverse flex-column">
             <h4 class="project-title pl-md-4"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
           </div>
-          <p class="project-p">In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
+          <p class="project-p-l">In collaboration with Lauren Smalley, Brenden Nackerman, Diana Pinon, and myself, our team created this Ruby
             on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together
             with distance book clubs.</p>
         </div>
@@ -45,7 +45,7 @@
           <div class="title d-flex flex-md-row flex-column">
             <h4 class="project-title pr-4"><a href="http://schoolgoal.herokuapp.com/" target="_blank">Schoolgoal</a></h4>
           </div>
-          <p class="project-p">The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
+          <p class="project-p-r">The first collaborative effort between my Le Wagon team also featuring Lauren Smalley, Brenden Nackerman, and
             Diana Pinon. This app was made with care by Ruby on Rails, deployed with Heroku. This app brings teachers and
             students together for niche distance learning.</p>
             <p class="project-p"></p>
