--- a/app/assets/stylesheets/components/_project.scss
+++ b/app/assets/stylesheets/components/_project.scss
@@ -12,8 +12,18 @@
   width: 12vw;
 }
 
-.project-p {
+.project-p-l, .project-p-r, .project-p {
   font-size: 1.2rem;
+}
+
+.project-p-l {
+  position: relative;
+  left: 12px;
+}
+
+.project-p-r {
+  position: relative;
+  right: 14px;
 }
 
 .project-sass,
@@ -30,7 +40,7 @@
 }
 
 .project-title {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
 }
 
 @include media-breakpoint-down(md) {
