changed squidy app url

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
   
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
-    <p><a href="https://squidiapp.herokuapp.com/" target="_blank">JAN 2021 | SquidyApp: </a>A MapBox-based wifi tracking app</p>
+    <p><a href="http://www.squidyapp.xyz/" target="_blank">JAN 2021 | SquidyApp: </a>A MapBox-based wifi tracking app</p>
     <p class="d-none d-lg-block">..........................<a href="https://github.com/seano424/squidy" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
