--- a/app/assets/stylesheets/components/_images.scss
+++ b/app/assets/stylesheets/components/_images.scss
@@ -3,9 +3,10 @@
 }
 
 .portfolio-images {
-  // margin: 13px 0;
-  width: 100%;
-  height: 67%;
+  width: 300px;
+  height: 300px;
   border-radius: 4px;
   outline: none;
+  object-fit: cover;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
