--- a/app/assets/stylesheets/components/_project.scss
+++ b/app/assets/stylesheets/components/_project.scss
@@ -1,3 +1,8 @@
+// .my-card-content {
+//   background: black;
+//   color: white;
+// }
+
 .project-icons {
   width: 10%;
   padding-bottom: 4px;
@@ -12,7 +17,9 @@
   width: 12vw;
 }
 
-.project-p-l, .project-p-r, .project-p {
+.project-p-l,
+.project-p-r,
+.project-p {
   font-size: 1.2rem;
 }
 
@@ -41,6 +48,7 @@
 
 .project-title {
   font-size: 1.8rem;
+  font-family: "Bebas Neue", cursive;
 }
 
 @include media-breakpoint-down(md) {
