--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -30,6 +30,10 @@
   <p class="d-none d-lg-block">............................<a href="https://github.com/seano424/speechrecognition" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
+  <p><a href="https://clever-joliot-5652e2.netlify.app/" target="_blank">JAN 2021 | Countdown: </a>JavaScript Clock Countdown</p>
+  <p class="d-none d-lg-block">................................<a href="https://github.com/seano424/countdown" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
   <p><a href="https://sealife.herokuapp.com/" target="_blank">DEC 2020 | Sealife: </a>A visual CSS experiment</p>
   <p class="d-none d-lg-block">................................................<a href="https://github.com/seano424/sealife" title="Github" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
