adjusted one padding

--- a/app/views/pages/projects.html.erb
+++ b/app/views/pages/projects.html.erb
@@ -36,7 +36,7 @@
           <div class="title pt-4 pt-lg-1 d-flex flex-md-row-reverse flex-column">
             <h4 class="project-title mb-0 pl-md-4 pt-1"><a href="https://www.booklub.xyz/" target="_blank">Booklub</a></h4>
           </div>
-          <p class="pt-5 mt-2 pl-4">In collaboration with <a style="text-decoration: none;" href="https://www.linkedin.com/in/lauren-a-smalley/" target="_blank">Lauren Smalley</a>, <a style="text-decoration: none;" href="https://www.linkedin.com/in/brenden-nackerman/" target="_blank">Brenden Nackerman</a>, <a style="text-decoration: none;" href="https://www.linkedin.com/in/diana-pinon/" target="_blank">Diana Pinon</a>, and myself, our team created this Ruby
+          <p class="pt-5 mt-2 pl-md-4">In collaboration with <a style="text-decoration: none;" href="https://www.linkedin.com/in/lauren-a-smalley/" target="_blank">Lauren Smalley</a>, <a style="text-decoration: none;" href="https://www.linkedin.com/in/brenden-nackerman/" target="_blank">Brenden Nackerman</a>, <a style="text-decoration: none;" href="https://www.linkedin.com/in/diana-pinon/" target="_blank">Diana Pinon</a>, and myself, our team created this Ruby
             on Rails app, deployed on heroku, using PostgreSQL. This is an app designed to bring book enthusiasts together
             with distance book clubs.</p>
         </div>
@@ -84,7 +84,7 @@
           <div class="title d-flex flex-md-row-reverse flex-column">
             <h4 class="d-flex project-title pt-1 mb-0"><a href="https://sean-mr-cocktail.herokuapp.com/" target="_blank">Mr. Cocktail</a></h4>
           </div>
-          <p class="pt-5 mt-2 pl-4">Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
+          <p class="pt-5 mt-2 pl-md-4">Mr. Cocktail was my first MVC project with rails. This is a simple showcase that utilizes an api for seeding,
             PostgreSQL for the database, and bootstrap for the majority of the design.</p>
         </div>
         <div class="col-md-6 d-none d-md-block">
