col pf change to small size

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 <div class="d-flex flex-column mt-3">
   <h2>Sean O'Reilly</h2>
   <div class="row">
-    <div class="col-4">
+    <div class="col-md-4">
       <%= image_tag "sean.jpg", style: "width: 15vw" %>
     </div>
     <div class="col">
