added fuse.js assignment

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,6 +32,10 @@
 <h3 class="my-3">Experiments I've played around on recently ...</h3>
 
 <div class="d-flex justify-content-between">
+  <p><a href="https://eager-ramanujan-85c697.netlify.app/" target="_blank">FEB 2021 | Fuse.js: </a>Fuzzy Search with React w/out dependencies</p>
+  <p class="d-none d-lg-block">..........<a href="https://github.com/seano424/react-fusejs-example" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
   <p><a href="https://zen-goldstine-84caba.netlify.app/" target="_blank">FEB 2021 | React Blog: </a>Understanding Redux / Lodash</p>
   <p class="d-none d-lg-block">............................<a href="https://github.com/seano424/blog" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
