added react flats

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,15 +16,15 @@
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
     <p><a href="http://www.squidyapp.xyz/" target="_blank">JAN 2021 | SquidyApp: </a>A MapBox-based wifi tracking app</p>
-    <p class="d-none d-lg-block">......................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">.........................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a href="https://www.booklub.xyz/" target="_blank">DEC 2020 | Booklub: </a> A Ruby on Rails book club app</p>
-    <p class="d-none d-lg-block">...............................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">..................................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">NOV 2020 | Schoolgoal: </a>Connecting teachers & students</p>
-    <p class="d-none d-lg-block">.......................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">..........................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
@@ -32,44 +32,48 @@
 <h3 class="my-3">Experiments I've played around on recently ...</h3>
 
 <div class="d-flex justify-content-between">
+  <p><a href="https://zealous-goldstine-d57501.netlify.app/" target="_blank">FEB 2021 | React-Flats: </a>Map Search utilizing GoogleMapReact</p>
+  <p class="d-none d-xl-block">.................<a href="https://github1s.com/seano424/react-flats" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
   <p><a href="https://eager-ramanujan-85c697.netlify.app/" target="_blank">FEB 2021 | Fuse.js: </a>Fuzzy Search with React w/out dependencies</p>
-  <p class="d-none d-lg-block">..........<a href="https://github.com/seano424/react-fusejs-example" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">..........<a href="https://github.com/seano424/react-fusejs-example" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://zen-goldstine-84caba.netlify.app/" target="_blank">FEB 2021 | React Blog: </a>Understanding Redux / Lodash</p>
-  <p class="d-none d-lg-block">............................<a href="https://github.com/seano424/blog" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">..............................<a href="https://github.com/seano424/blog" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://heuristic-elion-7df3d1.netlify.app/" target="_blank">JAN 2021 | React Video Player: </a>using YouTube's Data API</p>
-  <p class="d-none d-lg-block">.......................<a href="https://github.com/seano424/player" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">.........................<a href="https://github.com/seano424/player" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://flamboyant-roentgen-13f159.netlify.app/" target="_blank">JAN 2021 | Unsplash Gallery: </a>React gallery from Unsplash API</p>
-  <p class="d-none d-lg-block">................<a href="https://github.com/seano424/pics" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">..................<a href="https://github.com/seano424/pics" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://frosty-kare-34c3d4.netlify.app/" target="_blank">JAN 2021 | Abracadabra: </a>JavaScript Speech Recognition</p>
-  <p class="d-none d-lg-block">........................<a href="https://github.com/seano424/speechrecognition" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">..........................<a href="https://github.com/seano424/speechrecognition" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://clever-joliot-5652e2.netlify.app/" target="_blank">JAN 2021 | Countdown: </a>JavaScript Clock Countdown</p>
-  <p class="d-none d-lg-block">............................<a href="https://github.com/seano424/countdown" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">.................................<a href="https://github.com/seano424/countdown" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://sealife.herokuapp.com/" target="_blank">DEC 2020 | Sealife: </a>A visual CSS experiment</p>
-  <p class="d-none d-lg-block">............................................<a href="https://github.com/seano424/sealife" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">................................................<a href="https://github.com/seano424/sealife" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://sean-mr-cocktail.herokuapp.com/" target="_blank">NOV 2020 | Mr. Cocktail: </a>An MVP to collect recipes</p>
-  <p class="d-none d-lg-block">................................<a href="https://github.com/seano424/rails-mister-cocktail" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">....................................<a href="https://github.com/seano424/rails-mister-cocktail" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://github.com/seano424/rails-simple-airbnb" target="_blank">NOV 2020 | Rails Simple Airbnb: </a>Keep track of your tasks</p>
-  <p class="d-none d-lg-block">....................<a href="https://github.com/seano424/rails-simple-airbnb" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">........................<a href="https://github.com/seano424/rails-simple-airbnb" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://github.com/seano424/rails-yelp-mvp" target="_blank">NOV 2020 | Rails Yelp MVP: </a>list and locate restaurants</p>
-  <p class="d-none d-lg-block">..........................<a href="https://github.com/seano424/rails-yelp-mvp" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">..............................<a href="https://github.com/seano424/rails-yelp-mvp" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
