--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,15 +16,15 @@
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
     <p><a href="http://www.squidyapp.xyz/" target="_blank">JAN 2021 | SquidyApp: </a>A MapBox-based wifi tracking app</p>
-    <p class="d-none d-xl-block">.........................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">.............................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a href="https://www.booklub.xyz/" target="_blank">DEC 2020 | Booklub: </a> A Ruby on Rails book club app</p>
-    <p class="d-none d-xl-block">..................................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">......................................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">NOV 2020 | Schoolgoal: </a>Connecting teachers & students</p>
-    <p class="d-none d-xl-block">..........................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">..............................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
@@ -32,12 +32,24 @@
 <h3 class="my-3">Experiments I've played around on recently ...</h3>
 
 <div class="d-flex justify-content-between">
+  <p><a href="https://heuristic-hoover-a138e1.netlify.app/" target="_blank">March 2021 | Yahtzee: </a>A dynamic state game</p>
+  <p class="d-none d-xl-block">........................................................<a href="https://github.com/seano424/yahtzee-starter" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
+  <p><a href="https://cocky-aryabhata-6de6f6.netlify.app/" target="_blank">March 2021 | Colors: </a>Random colors display app</p>
+  <p class="d-none d-xl-block">................................................<a href="https://github.com/seano424/colors" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
+  <p><a href="https://brave-roentgen-f44bc6.netlify.app/" target="_blank">FEB 2021 | Todos: </a>Very simple todo app only using state</p>
+  <p class="d-none d-xl-block">....................................<a href="https://github.com/seano424/ex-forms" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
+<div class="d-flex justify-content-between">
   <p><a href="https://zealous-goldstine-d57501.netlify.app/" target="_blank">FEB 2021 | React-Flats: </a>Map Search utilizing GoogleMapReact</p>
-  <p class="d-none d-xl-block">.................<a href="https://github1s.com/seano424/react-flats" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">........................<a href="https://github1s.com/seano424/react-flats" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://eager-ramanujan-85c697.netlify.app/" target="_blank">FEB 2021 | Fuse.js: </a>Fuzzy Search with React w/out dependencies</p>
-  <p class="d-none d-xl-block">..........<a href="https://github.com/seano424/react-fusejs-example" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  <p class="d-none d-xl-block">....................<a href="https://github.com/seano424/react-fusejs-example" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
 </div>
 <div class="d-flex justify-content-between">
   <p><a href="https://zen-goldstine-84caba.netlify.app/" target="_blank">FEB 2021 | React Blog: </a>Understanding Redux / Lodash</p>
