--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,7 +11,7 @@
   </div>
     <p class="mt-3">A recent graduate from the acclaimed <a class="home-links" href="https://www.lewagon.com/mexico" target="_blank">Le Wagon</a> international bootcamp, I come prepared and excited to grow and learn as a developer. Download my resume <%= link_to "here", asset_path("seanoreillyresume.pdf"), download:"seanoreillyresume.pdf" %>.</p> 
   
-    <p>Have a project you think we'd work well on together? <%= link_to "Get in touch!", new_contact_path, class: "home-links" %></p>
+    <p>Have a project you think we'd work well on together? <a class="tabs" style="background: #21FDE1;" href="mailto:soreilly424@gmail.com?subject = Feedback&body = Message">Get in touch</a></p>
   
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
