--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -27,7 +27,8 @@
   <div id="examples">
     <div class="example">
       <span class="hover hover-1">
-        <%= link_to "Get in touch", new_contact_path, class: "tabs", style: "background: #21FDE1; " %>
+        <!-- <%= link_to "Get in touch", new_contact_path, class: "tabs", style: "background: #21FDE1;" %> -->
+        <a class="tabs" style="background: #21FDE1;" href="mailto:soreilly424@gmail.com?subject = Feedback&body = Message">Get in touch</a>
       </span>
     </div>
   </div>  
