added coolors project

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,22 +15,34 @@
   
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
+    <p><a href="https://github.com/seano424/palette-app" target="_blank">April 2021 | ReactCoolors: </a>Find or Develop your own color palettes</p>
+    <p class="d-none d-xl-block">.....................<a href="https://github.com/seano424/palette-app" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
+    <p><a href="https://affectionate-hermann-b01e82.netlify.app/" target="_blank">April 2021 | DadJokesApp: </a>A terrible jokes app based on react</p>
+    <p class="d-none d-xl-block">.............................<a href="https://github.com/seano424/dad-jokes" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+  </div>
+  <div class="d-flex justify-content-between">
     <p><a href="http://www.squidyapp.xyz/" target="_blank">JAN 2021 | SquidyApp: </a>A MapBox-based wifi tracking app</p>
-    <p class="d-none d-xl-block">.............................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">.....................................<a href="https://github.com/seano424/squidy" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a href="https://www.booklub.xyz/" target="_blank">DEC 2020 | Booklub: </a> A Ruby on Rails book club app</p>
-    <p class="d-none d-xl-block">......................................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">...............................................<a href="https://github.com/seano424/booklub" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
     <p><a class="api-call" href="http://schoolgoal.herokuapp.com/" target="_blank">NOV 2020 | Schoolgoal: </a>Connecting teachers & students</p>
-    <p class="d-none d-xl-block">..............................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+    <p class="d-none d-xl-block">......................................<a href="https://github.com/seano424/schoolgoal" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
 
 <h3 class="my-3">Experiments I've played around on recently ...</h3>
 
+<div class="d-flex justify-content-between">
+  <p><a href="https://epic-kowalevski-3a9807.netlify.app/" target="_blank">April 2021 | CardDealer: </a>Utilizing react lifecycle methods</p>
+  <p class="d-none d-xl-block">.........................................<a href="https://github.com/seano424/cards-lifecycle-methods" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
+</div>
 <div class="d-flex justify-content-between">
   <p><a href="https://heuristic-hoover-a138e1.netlify.app/" target="_blank">March 2021 | Yahtzee: </a>A dynamic state game</p>
   <p class="d-none d-xl-block">........................................................<a href="https://github.com/seano424/yahtzee-starter" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
