added contact section

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,3 +101,11 @@
 </div>
 <div id="loader" class="loader-5 mx-auto d-none"><span></span></div>
 </div>
+
+
+<section id="get-in-touch" class="get-in-touch py-5 my-5 text-center shadow bg-body rounded">
+  <h3>Get in touch</h3>
+  <h6> <span class="text-primary">Gmail: </span>soreilly424@gmail.com</h6>
+  <h6> <span class="text-primary">GitHub: </span>@seano424</h6>
+  <h6> <span class="text-primary">LinkedIn: </span>@sea-oreilly</h6>
+</section>
