--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -28,7 +28,7 @@
     <div class="example">
       <span class="hover hover-1">
         <!-- <%= link_to "Get in touch", new_contact_path, class: "tabs", style: "background: #21FDE1;" %> -->
-        <a class="tabs" style="background: #21FDE1;" href="mailto:soreilly424@gmail.com?subject = Feedback&body = Message">Get in touch</a>
+        <a class="tabs" style="background: #21FDE1;" href="#get-in-touch">Get in touch</a>
       </span>
     </div>
   </div>  
