--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
   
   <h3 class="my-3">Projects I've worked on recently ...</h3>
   <div class="d-flex justify-content-between">
-    <p><a href="https://github.com/seano424/palette-app" target="_blank">April 2021 | ReactCoolors: </a>Find or Develop your own color palettes</p>
+    <p><a href="https://competent-hawking-40fb57.netlify.app/" target="_blank">April 2021 | ReactCoolors: </a>Find or Develop your own color palettes</p>
     <p class="d-none d-xl-block">.....................<a href="https://github.com/seano424/palette-app" title="Github Repo" target="_blank" style="text-decoration: none;">💎</a></p>
   </div>
   <div class="d-flex justify-content-between">
